RESOLVED FIXED272752
[GStreamer][MediaStream] gst_object_get_path_string() leaking in mediastreamsrc element
https://bugs.webkit.org/show_bug.cgi?id=272752
Summary [GStreamer][MediaStream] gst_object_get_path_string() leaking in mediastreams...
Philippe Normand
Reported 2024-04-16 06:56:35 PDT
.
Attachments
Philippe Normand
Comment 1 2024-04-16 07:01:51 PDT
EWS
Comment 2 2024-04-17 00:48:33 PDT
Committed 277599@main (99c088c4507f): <https://commits.webkit.org/277599@main> Reviewed commits have been landed. Closing PR #27327 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-04-17 00:49:15 PDT
Note You need to log in before you can comment on or make changes to this bug.