Cherry-pick 277599@main (99c088c4507f). https://bugs.webkit.org/show_bug.cgi?id=272752

[GStreamer][MediaStream] gst_object_get_path_string() leaking in mediastreamsrc element
    https://bugs.webkit.org/show_bug.cgi?id=272752

    Reviewed by Xabier Rodriguez-Calvar.

    Fix string leak webkitMediaStreamSrcAddPad().

    * Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
    (webkitMediaStreamSrcAddPad):

    Canonical link: https://commits.webkit.org/277599@main

Canonical link: https://commits.webkit.org/274313.147@webkitglib/2.44